# ProgramlamaDilleri_Bot

./: .gitignore  .pre-commit-config.yaml  README.md  prodil.ini.sample  pyproject.toml  requirements.txt  sql.ini.sample
.github/workflows/: precommit.yml
client/: api.py
probot/: BotConfig.py  __main__.py
probot/plugins/: bot_commands.py  bot_query.py
probot/utils/: __init__.py  botuser.py  filters.py  helpers.py  messages.py  quest.py
prodil/: BotConfig.py  __main__.py  prodil.ini.sample
prodil/models/: model.py
prodil/off_plug/: offline_mode  updates.py
prodil/plugins/: bot_commands.py  bot_query.py  callbacks.py  check.py  markup_test.py  ping.py  resources.py
prodil/utils/: botuser.py  filters.py  helpers.py  logger.py  messages.py  myfilters.py  queries.py  quest.py
