[tool.poetry]
name = "prodil"
version = "0.1.0"
description = ""
authors = ["ahmetveburak <https://t.me/musaitbiyerde>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.3"
pyrogram = "*"
tgcrypto = "*"
sqlalchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
