[tool.poetry]
name = "prodil"
version = "0.1.0"
description = ""
authors = ["ahmetveburak <https://t.me/musaitbiyerde>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.3"
Pyrogram = "^1.2.9"
TgCrypto = "^1.2.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
black = "^20.8b1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119
skip_gitignore = true
